@@ -1,3 +1,10 @@
+2001-04-13  Pavel Cisler  <pavel@eazel.com>
+
+	* src/file-manager/fm-list-view.c: (real_get_link_column),
+	(real_get_column_specification):
+	Move the emblem column after the name column.
+	Give the emblem column a title.
+
 2001-04-13  Gene Z. Ragan  <gzr@eazel.com>
 
 	Fix issues in the volume monitor that crept in over time.
